[package]
name = "swagger"
version = "1.0.0"
authors = ["Swagger Codegen team and contributors"]

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.4"
serde_json = "1.0"
base64 = "~0.7.0"
futures = "0.1.16"
hyper = "0.14.10"
url = "1.5"

[dev-dependencies]
tokio-core = "*"
hyper = "0.14.10"
serde_yaml = "0.8.4"
